# scratchpad

./: 15_3sum.py  holder.py  pyproject.toml
interview set/easy collection/arrays/: bestbuysell.js  containsdupe.js  intersecting2arrays2.js  movezeros.js  plusone.js  removedupes.js  rotatearray.js  singlenum.js  twosum.js  validsudoku.js
interview set/easy collection/strings/: reverseint.js
python/: 1051_height_checker.py  10_regular_expression_matching.py  1122_relative_sort_array.py  11_container_with_most_water.py  129_sum_of_root_to_leaf.py  12_integer_to_roman.py  13_roman_to_int.py  14_longest_common_prefix.py  15_3sum.py  16_3sum_closest.py  17_letter_combinations_phone.py  1971_find_if_path_exists.py  2225_find_players_with_zero_or_one_losses.py  6_zigzag_conversion.py  7_reverse_integer.py  8_string_to_integer.py  9_palindrome_number.py  holder.py
