[tool.poetry]
name = "scratchpad"
version = "0.1.0"
description = ""
authors = ["iTheSailor <112807438+iTheSailor@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
